[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[pyproject.optional-dependencies]
dev = [
    "numpy",  # required for tests
    "pytest",
    "ruff",
]

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"

[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-* cp311-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
