[build-system]
requires = [
    "setuptools",
    "pybind11>=3",
]
build-backend = "setuptools.build_meta"

[pyproject.optional-dependencies]
dev = [
    "numpy",  # required for tests
    "pytest",
    "ruff",
]

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py312"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
